--- a/array_cardio_1.html
+++ b/array_cardio_1.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+  <!-- this is just for the git example-->
   <script>
     // Get your shorts on - this is an array workout!
     // ## Array Cardio Day 1
